apparently spring 4.0.1 is the answer?  also, using /queue instead of /topic apparently makes a difference?  automagical can suck sometimes.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -21,7 +21,7 @@
 		stompClient.connect('', '', function(frame) {
 			setConnected(true);
 			console.log('Connected: ' + frame);
-			stompClient.subscribe('/user/topic/greetings', function(greeting) {
+			stompClient.subscribe('/user/queue/greetings', function(greeting) {
 				showGreeting(JSON.parse(greeting.body).content);
 			});
 		});
