--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,6 +10,15 @@
     height: 200px;
     width: 600px;
     overflow-y: scroll;
+    overflox-x: hidden;
+    background-color: #F5F5F5;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px 0 4px 0;
+    color: #3B3C3E;
+    font-size: 12px;
+    font-weight: bold;
+    left: -1px;
+    padding: 10px 7px 5px;
   }
 </style>
 </head>
@@ -48,12 +57,13 @@
       }
 
       function showGreeting(message) {
-        var response = document.getElementById('response');
-        var p = document.createElement('p');
-        p.style.wordWrap = 'break-word';
-        p.appendChild(document.createTextNode(message.userName + ' says: '));
-        p.appendChild(document.createTextNode(message.content));
-        response.appendChild(p);
+        var elementId = 'chat-' + message.userName;
+        var selector = '#' + elementId;
+        if (!$(selector).length) {
+          $('body').append('<div id="' + elementId + '" class="chat"></div>');
+        }
+        $(selector).append('<span>' + message.userName + ' says: </span><span>' + message.content + '</span><br/>');
+        $(selector).animate({ scrollTop: $(selector)[0].scrollHeight}, 1);
       }
       
       $(document).ready(function() {
