moved css out and switched to tree set for usernames

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,22 +5,7 @@
 <script src="sockjs-0.3.4.js"></script>
 <script src="stomp.js"></script>
 <script src="jquery-2.1.0.min.js"></script>
-<style>
-  .chat {
-    height: 200px;
-    width: 600px;
-    overflow-y: scroll;
-    overflox-x: hidden;
-    background-color: #F5F5F5;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px 0 4px 0;
-    color: #3B3C3E;
-    font-size: 12px;
-    font-weight: bold;
-    left: -1px;
-    padding: 10px 7px 5px;
-  }
-</style>
+<link href="chat.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <div>
