--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
 <script src="sockjs-0.3.4.js"></script>
 <script src="stomp.js"></script>
 <script src="jquery-2.1.0.min.js"></script>
-<link href="chat.css" rel="stylesheet" type="text/css">
+<link href="chat.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <div>
